--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>Wild Gunman</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <section class="game-menu">
