add cod file for edit

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <h2 class="win-screen__title">You have won the game!</h2>
   </section>
   <!-- Game win screen -->
-
+  <script src="script.js"></script>
 </body>
+
+
 </html>
