add photo and add game.screen

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="wrapper">
   <section class="game-panels">
     <div class="players-panel">
-      <div class="players-panel__you">Time.You</div>
-      <div class="players-panel__gunman">Gunman</div>
+      <div class="players-panel__you">Gunman</div>
+      <div class="players-panel__gunman">Time.You</div>
     </div>
     <div class="white-line"></div>
     <div class="time-panel">
